codegen/tests/ui/missing-attribute.rs
#[shuttle_codegen::main]
async fn missing_attriute(pool: PgPool, cache: Redis) {}
